// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Renders with size '1' 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '2' 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-2"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-2"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '3' 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-3"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-3"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '4' 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-4"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-4"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '5' 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-5"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-5"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '6' 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-6"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-6"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio renders as vertical 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;

exports[`Radio renders correctly with label 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top radioGroup__Test__root radioGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__label"
    id="react-aria-2"
  >
    <span
      className="label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="radioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        One
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test1"
      />
    </label>
    <label
      className="label__Test__root label__Test--hasInput radio__Test__root radio__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        Two
      </span>
      <input
        checked={false}
        className="radio__Test__input"
        disabled={false}
        name="react-aria-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="test2"
      />
    </label>
  </div>
</div>
`;
